--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,17 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: "1.24.4"
-    - name: Test
+    - name: Run unit tests
       run: |
-        go test ./...
+        go test ./internal/...
+    - name: Run Docker compose
+      run: |
+        docker compose up -d  # Run containers in background
+    - name: Run integration tests
+      run: |
+        go test ./integration/...
+    - name: Stop Docker compose
+      if: always()  # Always run even if integration tests fail
+      run: |
+        docker compose down
 
