feat(config): toggle metrics endpoint

--- a/config.yaml
+++ b/config.yaml
@@ -9,3 +9,6 @@ servers:
   - url: "http://server1:8081"
   - url: "http://server2:8082" 
   - url: "http://server3:8083"
+
+metrics:
+  enabled: false
