--- a/config.yaml
+++ b/config.yaml
@@ -3,15 +3,18 @@ health_check:
   timeout: 5s
 
 load_balancer:
-  algorithm: "WeightedRoundRobin" 
+  algorithm: "RoundRobin" 
 
 servers:
   - url: "http://server1:8081"
-    weight: 3
+    weight: 1
+    artificial_latency: -1ms
   - url: "http://server2:8082" 
     weight: 1
+    artificial_latency: -1ms
   - url: "http://server3:8083"
     weight: 1
+    artificial_latency: -1ms
 
 metrics:
   enabled: true
