feat: scaling servers compose up file

--- a/compose.yml
+++ b/compose.yml
@@ -6,50 +6,21 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./config.yaml:/usr/local/bin/config.yaml
+      - ./config.yml:/usr/local/bin/config.yml
     depends_on:
-      - server1
-      - server2
-      - server3
+      - server
     networks:
       - lb-network
 
-  server1:
+  server:
     build:
       context: .
       dockerfile: docker/Dockerfile.server
     command: ["--latency", "-1s"] # config.yaml preferred
     environment:
-      - PORT=8081
-      - SERVER_ID=1
-    ports:
-      - "8081:8081"
-    networks:
-      - lb-network
-
-  server2:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.server
-    command: ["--latency", "-1s"] # config.yaml preferred
-    environment:
-      - PORT=8082
-      - SERVER_ID=2
-    ports:
-      - "8082:8082"
-    networks:
-      - lb-network
-
-  server3:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.server
-    command: ["--latency", "-1s"] # config.yaml preferred
-    environment:
-      - PORT=8083
-      - SERVER_ID=3
-    ports:
-      - "8083:8083"
+      - PORT=8080
+    labels:
+      - "server=true"
     networks:
       - lb-network
 networks:
