--- a/config.yml
+++ b/config.yml
@@ -6,13 +6,8 @@ load_balancer:
   algorithm: "RoundRobin" 
 
 servers:
-  - url: "http://server1:8081"
-    weight: 1
-    artificial_latency: -1ms
-  - url: "http://server2:8082" 
-    weight: 1
-    artificial_latency: -1ms
-  - url: "http://server3:8083"
+  - url: "http://server:8080"
+    count: 5
     weight: 1
     artificial_latency: -1ms
 
