--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ health_check:
   timeout: 5s
 
 load_balancer:
-  algorithm: "RoundRobin" 
+  algorithm: "LeastUsedResources" 
 
 servers:
   - url: "http://server1:8081"
