--- a/config.yaml
+++ b/config.yaml
@@ -18,4 +18,10 @@ servers:
 
 metrics:
   enabled: true
+  PollingInterval: 5s
   latency_samples: 100
+
+docker:
+  enabled: true
+  polling_interval: 5s
+  container_stats: true
