--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,7 @@ services:
       - "8080:8080"
     volumes:
       - ./config.yaml:/usr/local/bin/config.yaml
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - server1
       - server2
@@ -24,6 +25,8 @@ services:
       - SERVER_ID=1
     ports:
       - "8081:8081"
+    labels:
+      - role=server
     networks:
       - lb-network
 
@@ -37,6 +40,8 @@ services:
       - SERVER_ID=2
     ports:
       - "8082:8082"
+    labels:
+      - role=server
     networks:
       - lb-network
 
@@ -50,6 +55,8 @@ services:
       - SERVER_ID=3
     ports:
       - "8083:8083"
+    labels:
+      - role=server
     networks:
       - lb-network
 networks:
