--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -10,7 +10,7 @@ FROM golang:1.23-alpine AS builder
 WORKDIR /app
 
 # Download Go module definition to download dependencies first
-COPY go.mod ./
+COPY go.mod go.sum ./
 
 # Download Go dependencies into the module cache
 RUN go mod download
